[package]
name = "aram-helper"
version = "0.1.0"
description = "ARAM 红包局助手 - 自动显示伤害排名"
authors = ["paidaxn"]
edition = "2021"

[lib]
name = "aram_helper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
embed-resource = "3"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
